Fix sonar bugs.